--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
 <html>
+<body>
 
 
+<input type="text" id="campo">
+
+<br><br>
+
+<button onclick="alert('Aqui eu coloco a minha mensagem')">
+    Exibir mensagem
+</button>
+
+
+<script language="javascript">
+    document.getElementById("campo").value = "Dan Lustosa"
+</script>
+
+
+
+</body>
 </html>
