--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
 
 <br><br>
 
-<button onclick="alert('Aqui eu coloco a minha mensagem')">
+<button onclick="abrirMensagens()">
     Exibir mensagem
 </button>
 
 
 <script language="javascript">
     document.getElementById("campo").value = "Dan Lustosa"
+
+    function abrirMensagens() {
+        alert('Aqui eu coloco a minha mensagem')
+        alert("Oi, meu nome é Dan")
+    }
 </script>
 
 
